cmake_minimum_required (VERSION 2.8.9)
project(SynfigCore)

set(SYNFIG_CORE_MAJOR ${SYNFIG_MAJOR})
set(SYNFIG_CORE_MINOR ${SYNFIG_MINOR})
set(SYNFIG_CORE_PATCH ${SYNFIG_PATCH})
set(SYNFIG_CORE_VER "${SYNFIG_CORE_MAJOR}.${SYNFIG_CORE_MINOR}.${SYNFIG_CORE_PATCH}")

set(SYNFIG_CORE_PREFIX   ${CMAKE_INSTALL_PREFIX})
set(SYNFIG_CORE_BIN_PATH ${SYNFIG_CORE_PREFIX}/bin)
set(SYNFIG_CORE_LIB_PATH ${SYNFIG_CORE_PREFIX}/lib)
set(SYNFIG_CORE_INCLUDE_PATH ${SYNFIG_CORE_PREFIX}/include)
set(SYNFIG_MODULES_DIR ${SYNFIG_CORE_PREFIX}/etc)

configure_file(synfig.pc.in synfig.pc @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/synfig.pc DESTINATION lib/pkgconfig)

include_directories(${SYNFIG_CORE_INCLUDE_PATHS})

add_subdirectory(src)