cmake_minimum_required (VERSION 2.8.9)
project(SynfigCore)

set(SYNFIG_STUDIO_MAJOR ${SYNFIG_MAJOR})
set(SYNFIG_STUDIO_MINOR ${SYNFIG_MINOR})
set(SYNFIG_STUDIO_PATCH ${SYNFIG_PATCH})
set(SYNFIG_STUDIO_VER "${SYNFIG_STUDIO_MAJOR}.${SYNFIG_STUDIO_MINOR}.${SYNFIG_STUDIO_PATCH}")

set(SYNFIG_STUDIO_PREFIX   ${CMAKE_INSTALL_PREFIX})
set(SYNFIG_STUDIO_BIN_PATH ${SYNFIG_STUDIO_PREFIX}/bin)
set(SYNFIG_STUDIO_LIB_PATH ${SYNFIG_STUDIO_PREFIX}/lib)
set(SYNFIG_STUDIO_INCLUDE_PATH ${SYNFIG_STUDIO_PREFIX}/include)

include_directories(${SYNFIG_STUDIO_INCLUDE_PATHS})

add_subdirectory(src)